--- a/archnginxnode/nginx.conf
+++ b/archnginxnode/nginx.conf
@@ -1,7 +1,7 @@
 user http;
 worker_processes  1;
 
-error_log  /var/logs/nginx/error.log;
+error_log  /var/log/nginx/error.log;
 
 events {
     worker_connections  1024;
@@ -15,7 +15,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/logs/nginx/access.log  main;
+    access_log /var/log/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
