Forgot to change the default document root from /var/www to /srv/http in archnginx's nginx.conf.

--- a/archnginx/nginx.conf
+++ b/archnginx/nginx.conf
@@ -30,7 +30,7 @@ http {
 
   		#Configures the publicly served root directory
   		#Configures the index file to be served
-  		root /var/www/example.com;
+  		root /srv/http/example.com;
       	index index.html index.htm;
 	}
 }
